--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/backend.css": "/css/backend.css",
+    "/js/auth/login.js": "/js/auth/login.js",
     "/js/backend.js": "/js/backend.js",
     "/js/books/create.js": "/js/books/create.js",
     "/js/books/edit.js": "/js/books/edit.js",
