--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -9,8 +9,10 @@
     "/js/backend.js": "/js/backend.js",
     "/js/books/create.js": "/js/books/create.js",
     "/js/books/edit.js": "/js/books/edit.js",
+    "/js/books/index.js": "/js/books/index.js",
     "/js/borrowers/create.js": "/js/borrowers/create.js",
     "/js/borrowers/edit.js": "/js/borrowers/edit.js",
+    "/js/circulation/index.js": "/js/circulation/index.js",
     "/js/donors/create.js": "/js/donors/create.js",
     "/js/donors/edit.js": "/js/donors/edit.js"
 }
