--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -18,6 +18,7 @@
     "/js/donors/create.js": "/js/donors/create.js",
     "/js/donors/edit.js": "/js/donors/edit.js",
     "/js/donors/index.js": "/js/donors/index.js",
+    "/js/information/edit.js": "/js/information/edit.js",
     "/js/loginLogs/index.js": "/js/loginLogs/index.js",
     "/js/users/create.js": "/js/users/create.js",
     "/js/users/edit.js": "/js/users/edit.js"
