--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,9 @@
     "/js/agencies/create.js": "/js/agencies/create.js",
     "/js/agencies/edit.js": "/js/agencies/edit.js",
     "/js/agencies/index.js": "/js/agencies/index.js",
+    "/js/announcements/create.js": "/js/announcements/create.js",
+    "/js/announcements/edit.js": "/js/announcements/edit.js",
+    "/js/announcements/index.js": "/js/announcements/index.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/backend.css": "/css/backend.css",
