--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/activities/create.js": "/js/activities/create.js",
+    "/js/activities/edit.js": "/js/activities/edit.js",
+    "/js/activities/index.js": "/js/activities/index.js",
     "/js/agencies/create.js": "/js/agencies/create.js",
     "/js/agencies/edit.js": "/js/agencies/edit.js",
     "/js/agencies/index.js": "/js/agencies/index.js",
@@ -25,6 +27,7 @@
     "/js/donors/index.js": "/js/donors/index.js",
     "/js/information/edit.js": "/js/information/edit.js",
     "/js/loginLogs/index.js": "/js/loginLogs/index.js",
+    "/js/recommendation/edit.js": "/js/recommendation/edit.js",
     "/js/users/create.js": "/js/users/create.js",
     "/js/users/edit.js": "/js/users/edit.js"
 }
