--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -12,6 +12,7 @@
     "/css/app.css": "/css/app.css",
     "/css/backend.css": "/css/backend.css",
     "/js/auth/login.js": "/js/auth/login.js",
+    "/js/auth/resetPassword.js": "/js/auth/resetPassword.js",
     "/js/backend.js": "/js/backend.js",
     "/js/books/create.js": "/js/books/create.js",
     "/js/books/edit.js": "/js/books/edit.js",
