--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "js-cookie": "^2.2.1",
         "sweetalert2": "^9.10.13",
         "vue-bootstrap-selectpicker": "^1.0.6",
+        "vue-select": "^3.10.3",
         "vuejs-paginate": "^2.1.0"
     }
 }
