--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -21,6 +21,7 @@
     "/js/borrowers/create.js": "/js/borrowers/create.js",
     "/js/borrowers/edit.js": "/js/borrowers/edit.js",
     "/js/borrowers/index.js": "/js/borrowers/index.js",
+    "/js/chart/index.js": "/js/chart/index.js",
     "/js/circulation/borrow.js": "/js/circulation/borrow.js",
     "/js/circulation/index.js": "/js/circulation/index.js",
     "/js/donors/create.js": "/js/donors/create.js",
