UnReturns Still Working

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -23,6 +23,7 @@
     "/js/borrowers/index.js": "/js/borrowers/index.js",
     "/js/circulation/borrow.js": "/js/circulation/borrow.js",
     "/js/circulation/index.js": "/js/circulation/index.js",
+    "/js/circulation/unreturns/index.js": "/js/circulation/unreturns/index.js",
     "/js/donors/create.js": "/js/donors/create.js",
     "/js/donors/edit.js": "/js/donors/edit.js",
     "/js/donors/index.js": "/js/donors/index.js",
