--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "jamesdordoy/laravelvuedatatable": "^1.3",
         "knplabs/knp-snappy": "^1.2",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
