frontend index navbar header

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -10,6 +10,7 @@
     "/js/announcements/index.js": "/js/announcements/index.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/frontend/frontend.css": "/css/frontend/frontend.css",
     "/css/backend.css": "/css/backend.css",
     "/js/auth/forgetPassword.js": "/js/auth/forgetPassword.js",
     "/js/auth/login.js": "/js/auth/login.js",
@@ -31,6 +32,7 @@
     "/js/donors/create.js": "/js/donors/create.js",
     "/js/donors/edit.js": "/js/donors/edit.js",
     "/js/donors/index.js": "/js/donors/index.js",
+    "/js/frontend.js": "/js/frontend.js",
     "/js/information/edit.js": "/js/information/edit.js",
     "/js/loginLogs/index.js": "/js/loginLogs/index.js",
     "/js/recommendation/edit.js": "/js/recommendation/edit.js",
