--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -34,6 +34,7 @@
     "/js/donors/edit.js": "/js/donors/edit.js",
     "/js/donors/index.js": "/js/donors/index.js",
     "/js/frontend.js": "/js/frontend.js",
+    "/js/information/donate.js": "/js/information/donate.js",
     "/js/information/edit.js": "/js/information/edit.js",
     "/js/loginLogs/index.js": "/js/loginLogs/index.js",
     "/js/recommendation/edit.js": "/js/recommendation/edit.js",
