front end activities

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -12,6 +12,7 @@
     "/css/app.css": "/css/app.css",
     "/css/frontend/frontend.css": "/css/frontend/frontend.css",
     "/css/frontend/donations/index.css": "/css/frontend/donations/index.css",
+    "/css/frontend/activities/index.css": "/css/frontend/activities/index.css",
     "/css/backend.css": "/css/backend.css",
     "/css/errors.css": "/css/errors.css",
     "/js/auth/forgetPassword.js": "/js/auth/forgetPassword.js",
@@ -36,6 +37,7 @@
     "/js/donors/edit.js": "/js/donors/edit.js",
     "/js/donors/index.js": "/js/donors/index.js",
     "/js/frontend.js": "/js/frontend.js",
+    "/js/frontend/activities/index.js": "/js/frontend/activities/index.js",
     "/js/information/donate.js": "/js/information/donate.js",
     "/js/information/edit.js": "/js/information/edit.js",
     "/js/loginLogs/index.js": "/js/loginLogs/index.js",
