donated book frontend

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -15,6 +15,7 @@
     "/css/frontend/activities/index.css": "/css/frontend/activities/index.css",
     "/css/frontend/activities/show.css": "/css/frontend/activities/show.css",
     "/css/frontend/recommandations/index.css": "/css/frontend/recommandations/index.css",
+    "/css/frontend/donatedBooks/index.css": "/css/frontend/donatedBooks/index.css",
     "/css/frontend/books/show.css": "/css/frontend/books/show.css",
     "/css/frontend/about/index.css": "/css/frontend/about/index.css",
     "/css/backend.css": "/css/backend.css",
@@ -42,6 +43,7 @@
     "/js/donors/index.js": "/js/donors/index.js",
     "/js/frontend.js": "/js/frontend.js",
     "/js/frontend/activities/index.js": "/js/frontend/activities/index.js",
+    "/js/frontend/donatedBooks/index.js": "/js/frontend/donatedBooks/index.js",
     "/js/frontend/recommandations/index.js": "/js/frontend/recommandations/index.js",
     "/js/information/donate.js": "/js/information/donate.js",
     "/js/information/edit.js": "/js/information/edit.js",
