Frontend Books Index Finished!

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,6 +16,7 @@
     "/css/frontend/activities/show.css": "/css/frontend/activities/show.css",
     "/css/frontend/recommandations/index.css": "/css/frontend/recommandations/index.css",
     "/css/frontend/about/index.css": "/css/frontend/about/index.css",
+    "/css/frontend/books/index.css": "/css/frontend/books/index.css",
     "/css/backend.css": "/css/backend.css",
     "/css/errors.css": "/css/errors.css",
     "/js/auth/forgetPassword.js": "/js/auth/forgetPassword.js",
@@ -41,6 +42,7 @@
     "/js/donors/index.js": "/js/donors/index.js",
     "/js/frontend.js": "/js/frontend.js",
     "/js/frontend/activities/index.js": "/js/frontend/activities/index.js",
+    "/js/frontend/books/index.js": "/js/frontend/books/index.js",
     "/js/frontend/recommandations/index.js": "/js/frontend/recommandations/index.js",
     "/js/information/donate.js": "/js/information/donate.js",
     "/js/information/edit.js": "/js/information/edit.js",
