freebook index finished!

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -19,6 +19,7 @@
     "/css/frontend/books/show.css": "/css/frontend/books/show.css",
     "/css/frontend/about/index.css": "/css/frontend/about/index.css",
     "/css/frontend/books/index.css": "/css/frontend/books/index.css",
+    "/css/frontend/freebooks/index.css": "/css/frontend/freebooks/index.css",
     "/css/backend.css": "/css/backend.css",
     "/css/errors.css": "/css/errors.css",
     "/js/auth/forgetPassword.js": "/js/auth/forgetPassword.js",
@@ -46,6 +47,7 @@
     "/js/frontend/activities/index.js": "/js/frontend/activities/index.js",
     "/js/frontend/books/index.js": "/js/frontend/books/index.js",
     "/js/frontend/donatedBooks/index.js": "/js/frontend/donatedBooks/index.js",
+    "/js/frontend/freebooks/index.js": "/js/frontend/freebooks/index.js",
     "/js/frontend/recommandations/index.js": "/js/frontend/recommandations/index.js",
     "/js/information/donate.js": "/js/information/donate.js",
     "/js/information/edit.js": "/js/information/edit.js",
