Announcement Index Finished !

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,7 @@
     "/css/frontend/about/index.css": "/css/frontend/about/index.css",
     "/css/frontend/books/index.css": "/css/frontend/books/index.css",
     "/css/frontend/freebooks/index.css": "/css/frontend/freebooks/index.css",
+    "/css/frontend/announcements/index.css": "/css/frontend/announcements/index.css",
     "/css/backend.css": "/css/backend.css",
     "/css/errors.css": "/css/errors.css",
     "/js/auth/forgetPassword.js": "/js/auth/forgetPassword.js",
@@ -45,6 +46,7 @@
     "/js/donors/index.js": "/js/donors/index.js",
     "/js/frontend.js": "/js/frontend.js",
     "/js/frontend/activities/index.js": "/js/frontend/activities/index.js",
+    "/js/frontend/announcements/index.js": "/js/frontend/announcements/index.js",
     "/js/frontend/books/index.js": "/js/frontend/books/index.js",
     "/js/frontend/donatedBooks/index.js": "/js/frontend/donatedBooks/index.js",
     "/js/frontend/freebooks/index.js": "/js/frontend/freebooks/index.js",
