Donor List Finished

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -22,6 +22,7 @@
     "/css/frontend/books/index.css": "/css/frontend/books/index.css",
     "/css/frontend/freebooks/index.css": "/css/frontend/freebooks/index.css",
     "/css/frontend/announcements/index.css": "/css/frontend/announcements/index.css",
+    "/css/frontend/donors/index.css": "/css/frontend/donors/index.css",
     "/css/backend.css": "/css/backend.css",
     "/css/errors.css": "/css/errors.css",
     "/js/auth/forgetPassword.js": "/js/auth/forgetPassword.js",
@@ -50,6 +51,7 @@
     "/js/frontend/announcements/index.js": "/js/frontend/announcements/index.js",
     "/js/frontend/books/index.js": "/js/frontend/books/index.js",
     "/js/frontend/donatedBooks/index.js": "/js/frontend/donatedBooks/index.js",
+    "/js/frontend/donors/index.js": "/js/frontend/donors/index.js",
     "/js/frontend/freebooks/index.js": "/js/frontend/freebooks/index.js",
     "/js/frontend/recommandations/index.js": "/js/frontend/recommandations/index.js",
     "/js/information/donate.js": "/js/information/donate.js",
