donated book show front end

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -17,6 +17,7 @@
     "/css/frontend/recommandations/index.css": "/css/frontend/recommandations/index.css",
     "/css/frontend/donatedBooks/index.css": "/css/frontend/donatedBooks/index.css",
     "/css/frontend/announcements/show.css": "/css/frontend/announcements/show.css",
+    "/css/frontend/donors/show.css": "/css/frontend/donors/show.css",
     "/css/frontend/books/show.css": "/css/frontend/books/show.css",
     "/css/frontend/about/index.css": "/css/frontend/about/index.css",
     "/css/frontend/books/index.css": "/css/frontend/books/index.css",
@@ -50,6 +51,7 @@
     "/js/frontend/announcements/index.js": "/js/frontend/announcements/index.js",
     "/js/frontend/books/index.js": "/js/frontend/books/index.js",
     "/js/frontend/donatedBooks/index.js": "/js/frontend/donatedBooks/index.js",
+    "/js/frontend/donors/show.js": "/js/frontend/donors/show.js",
     "/js/frontend/freebooks/index.js": "/js/frontend/freebooks/index.js",
     "/js/frontend/recommandations/index.js": "/js/frontend/recommandations/index.js",
     "/js/information/donate.js": "/js/information/donate.js",
